# SaintPeterburgStreetsAnalysis

./: .gitignore  Detector.py  README.md  config.json  imageCapture.py  main.py  pyproject.toml  visualizer.py
ImageGathering/: Detector.py  __init__.py  config.json  imageCapture.py  process.py
ImageGathering/analysis/: pyspark_runner.py
ImageGathering/configs/: cameras.json
ImageGathering/db_module/: db_commands.py  db_config.py
camera1/: camera1_results.json
camera2/: camera2_results.json
raw/: scheme.drawio
